--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "express": "^4.14.0",
         "express-handlebars": "^6.0.2",
         "jest": "^27.3.1",
-        "spiced-pg": "^1.0.4",
-        "supertest": "^4.0.2"
+        "spiced-pg": "^1.0.4"
+    },
+    "devDependencies": {
+        "supertest": "^6.2.4"
     }
 }
